# SGEyes

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  SGEye.sln  build.bat  window_build.bat
SGEye/: SGEye.cpp  SGEye.vcxproj  SGEye.vcxproj.filters  TheApp.cpp  TheApp.ixx
SGEyes/: CMakeLists.txt  config.json  define.h  main.cpp  the_app.cpp  the_app.hpp
SGEyes/config/: config.json  configuration.cpp  configuration.hpp
SGEyes/file_activity/: CMakeLists.txt  directory_watcher_mgr.cpp  directory_watcher_mgr.hpp
SGEyes/file_activity/watcher/: attribute_watcher.cpp  attribute_watcher.hpp  common_utils.cpp  common_utils.hpp  directory_watcher_base.cpp  directory_watcher_base.hpp  directory_watcher_mgr_impl.cpp  directory_watcher_mgr_impl.hpp  file_name_watcher.cpp  file_name_watcher.hpp  file_notify_info.cpp  file_notify_info.hpp  folder_name_watcher.cpp  folder_name_watcher.hpp  idirectory_watcher.hpp  iobserver.hpp  irequest.hpp  model_file_info.cpp  model_file_info.hpp  model_file_info2.cpp  model_file_info2.hpp  model_rename.cpp  model_rename.hpp  model_rename2.cpp  model_rename2.hpp  notify_to_server.cpp  notify_to_server.hpp  observer_impl.cpp  observer_impl.hpp  request_impl.cpp  request_impl.hpp  rule_checker.cpp  rule_checker.hpp  security_watcher.cpp  security_watcher.hpp  unnecessary_directory.cpp  unnecessary_directory.hpp  watching_setting.cpp  watching_setting.hpp
saigonlib/: CMakeLists.txt
saigonlib/include/: circle_map.hpp  circle_map2.hpp  define.hpp  spdlog_header.h  string_utils.hpp  task_timer.hpp  timer.hpp
saigonlib/src/: string_utils.cpp  task_timer.cpp  timer.cpp
saigonlib/test/: test_circle_map2.cpp  test_message_queue1.cpp  test_message_queue2.cpp
